# Wyvern

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  package.json
dependencies/: .clang-format  CMakeLists.txt
include/: Wyvern.h
include/Wyvern/: Atom.h
include/Wyvern/FS/: SourceFile.h
include/Wyvern/Lexer/: Lexer.h  Token.h
include/Wyvern/Utilities/: Event.h
samples/: Test.lls
samples/Simple/: CMakeLists.txt  Test.lls  main.cpp
src/: CMakeLists.txt
src/Wyvern/: CMakeLists.txt
src/Wyvern/FS/: SourceFile.cpp
src/Wyvern/Lexer/: Lexer.cpp
